2005-04-24 Yen-Ju Chen <yjchenx at gmail _dot_ com>

	* Initial Search Implementation.
	* Make it compile again.
	* Header/Search/LCQueryFilter.h:
	* Source/Search/LCQueryFilter.m:
	* Header/Search/LCBooleanClause.h:
	* Source/Search/LCBooleanClause.m: ported
	* TODO: add classes for help.

2005-04-16 Yen-Ju Chen <yjchenx at gmail _dot_ com>

	* Change method names to be more GNUstep-style.
	* Try to reduce the number of inclusion in header.
	* Source/Index/TestSegmentTermEnum.m:
	Test unit for LCSegmentTermEnum
	* chage "doc" in header to "document"

2005-04-15 Yen-Ju Chen <yjchenx at gmail _dot_ com>

	* Source/Util/LCBitVector.m:
	Clean up.
	* Source/Util/LCPriorityQueue.m:
	Move private methods into source code.
	Add LCComparable protocol.
	Remove -lessThan:: in favor of -compare: for GNUstep-style.
	* Headers/Index/LCCompoundFileWriter.h:
	* Source/Index/LCCompoundFileWriter.m:
	* Headers/Index/LCDocumentWriter.h:
	* Source/Index/LCDocumentWriter.m:
	* Headers/Index/LCFieldInfos.h:
	* Source/Index/LCFieldInfos.m:
	* Headers/Index/LCIndexReader.h:
	* Source/Index/LCIndexReader.m:
	* Headers/Index/LCIndexWriter.h:
	* Source/Index/LCIndexWriter.m:
	* Headers/Index/LCMultiReader.h:
	* Source/Index/LCMultiReader.m:
	* Headers/Index/LCMultipleTermPositions.h:
	* Source/Index/LCMultipleTermPositions.m:
	* Headers/Index/LCSegmentMerger.h:
	* Source/Index/LCSegmentMerger.m:
	* Headers/Index/LCSegmentReader.h:
	* Source/Index/LCSegmentReader.m:
	* Headers/Index/LCTermInfosReader.h:
	* Source/Index/LCTermInfosReader.m:
	* Headers/Index/LCTermInfosWriter.h:
	* Source/Index/LCTermInfosWriter.m:
	* Headers/Index/LCTermVectorsReader.h:
	* Source/Index/LCTermVectorsReader.m:
	* Headers/Index/LCTermVectorsWriter.h:
	* Source/Index/LCTermVectorsWriter.m:
	Move private methods into source code.

2005-04-14 Yen-Ju Chen <yjchenx at gmail _dot_ com>

	* Source/Index/TestIndexReader.m:
	Complete test unit for LCIndexReader.
	Some tests are disabled for now due to memory leak.